force-app/main/default/objects/LLC_BI__Team_Keys__c/LLC_BI__Team_Keys__c.object-meta.xml
<CustomObject>
    <label>Team Key</label>
    <nameField>
        <label>Team Keys Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Key</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>