force-app/main/default/objects/LLC_BI__Team_Keys__c/fields/LLC_BI__KeyName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__KeyName__c</fullName>
    <description>This field is required. It is manually populated. It is a text field where users and administrators can provide a name for a Team Alert. nCino recommends that Key Names and Template Names be identical.</description>
    <inlineHelpText>Use this key in the MailerTeamKey field for the respective object.</inlineHelpText>
    <label>Key Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>