force-app/main/default/objects/LLC_BI__Team_Keys__c/fields/LLC_BI__RoleName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RoleName__c</fullName>
    <description>This field is deprecated.  RoleName__c has been replaced with the Team_Key_Role__c object.</description>
    <label>-D Role Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closer</fullName>
            </value>
            <value>
                <fullName>Credit Analyst / Underwriter</fullName>
            </value>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Loan Ops</fullName>
            </value>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Special Assets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>