force-app/main/default/objects/LLC_BI__Team_Keys__c/fields/LLC_BI__TeamObjectName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TeamObjectName__c</fullName>
    <description>This field is required. It is manually populated. It identifies the object referenced in the Team Alert and workflow rules.</description>
    <inlineHelpText>The API name of the team object to query.</inlineHelpText>
    <label>Team Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>