force-app/main/default/objects/LLC_BI__Team_Keys__c/fields/LLC_BI__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TemplateName__c</fullName>
    <description>This field is required. It is manually populated. It is a text field where users and administrators can provide a name for a Team Alert Template. nCino recommends that Template Names and Key Names be identical.</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>