force-app/main/default/objects/LLC_BI__Team_Keys__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__TeamObjectName__c</columns>
    <columns>LLC_BI__TemplateName__c</columns>
    <columns>LLC_BI__KeyName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>